# pipeline-MLOPS

./: pipeline.html  pipeline.ipynb  pipeline.py
pipeline_MLOPS/: pyproject.toml
pipeline_MLOPS/pipeline_MLOPS/: __init__.py  pipeline.py
pipeline_MLOPS/pipeline_mlops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
