[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-mlops"
version = "0.1.0"
description = "Entrenamiento de pipeline de ML (GridSearch + RandomForest)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=1.5", "numpy>=1.23", "scikit-learn>=1.2", "joblib>=1.3"]

[tool.setuptools]
packages = ["pipeline_mlops"]

[project.scripts]
pipeline-mlops-train = "pipeline_mlops.pipeline:main"
